[package]
name = "hkfs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.5"
actix-web = "4.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.10"

[[bin]]
name = "namenode"
path = "src/namenode/namenode.rs"

[[bin]]
name = "datanode"
path = "src/datanode/datanode.rs"


